[package]
name = "steam-server-manager2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87" }
anyhow = "1.0.66"
